syntax = "proto3";
package authentication.v1;
option go_package = "/pkg";

//The authentication service is responsible for handling user authentication.
//It provides the following methods: SignIn, SignUp, SignOut, RefreshToken.
service Authentication {
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  rpc SignOut (SignOutRequest) returns (SignOutResponse);
  rpc RefreshToken (RefreshTokenRequest) returns (stream RefreshTokenResponse);
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  string token = 1;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  string token = 1;
}

message SignOutRequest {
  string token = 1;
}

message SignOutResponse {
  string message = 1;
}

message RefreshTokenRequest {
  string token = 1;
}

message RefreshTokenResponse {
  string token = 1;
}